create colorfilter on save

--- a/request_test.ipynb
+++ b/request_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "least-heating",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "pleasant-scene",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "limiting-headline",
    "metadata": {},
    "outputs": [
@@ -38,13 +38,13 @@
        " 'ra': None,\n",
        " 'dec': None,\n",
        " 'note': '',\n",
-       " 'telescope': 'Zeiss60',\n",
-       " 'colorfilters': ['B', 'V'],\n",
+       " 'telescope': {'name': 'Zeiss60'},\n",
+       " 'colorfilters': [{'name': 'B'}, {'name': 'V'}],\n",
        " 'total_exposure_time': None,\n",
        " 'number_of_frames': None}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,18 +56,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "id": "essential-shell",
    "metadata": {},
    "outputs": [],
    "source": [
     "c['datetime_start'] = dt.now().isoformat()\n",
-    "c['colorfilters'] = ['C']"
+    "c['colorfilters'] = [{'name': 'C'}]\n",
+    "c['telescope'] = 'Zeiss60'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
+   "id": "tropical-pulse",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'datetime_start': '2021-02-17T16:58:23.488906',\n",
+       " 'datetime_end': '2021-01-20T22:45:24Z',\n",
+       " 'observer': 'MZ',\n",
+       " 'name': 'V442 Per',\n",
+       " 'ra': None,\n",
+       " 'dec': None,\n",
+       " 'note': '',\n",
+       " 'telescope': 'Zeiss60',\n",
+       " 'colorfilters': [{'name': 'C'}],\n",
+       " 'total_exposure_time': None,\n",
+       " 'number_of_frames': None}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "caring-pharmaceutical",
    "metadata": {},
    "outputs": [
@@ -75,8 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [400]>\n",
-      "b'{\"colorfilters\":[\"Object with name=C does not exist.\"]}'\n"
+      "<Response [201]>\n",
+      "b'{\"datetime_start\":\"2021-02-17T16:58:23.488906Z\",\"datetime_end\":\"2021-01-20T22:45:24Z\",\"observer\":\"MZ\",\"name\":\"V442 Per\",\"ra\":null,\"dec\":null,\"note\":\"\",\"telescope\":\"Zeiss60\",\"colorfilters\":[{\"name\":\"C\"}],\"total_exposure_time\":null,\"number_of_frames\":null}'\n"
      ]
     }
    ],
