--- a/process_old.ipynb
+++ b/process_old.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "heard-scope",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "e214620d",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "afraid-water",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "departmental-cloud",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "brazilian-problem",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "fossil-writer",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "mobile-ghost",
    "metadata": {},
    "outputs": [],
@@ -267,28 +267,13 @@
     "            try:\n",
     "                logger.debug(f'Sending data: {target_data}')\n",
     "                response = requests.post(\n",
-    "                    UPLOAD_URL, auth=(DB_USER, DB_PASSWORD),\n",
-    "                        data=json.dumps(target_data),\n",
-    "                        headers={'content-type': 'application/json'})\n",
-    "            except (requests.ConnectionError, requests.Timeout) as e:\n",
-    "                logger.error(f'No DB connection - {e}')\n",
-    "                raise Exception(f'No connection to DB! - {e}')\n",
-    "            \n",
-    "            if not response.ok:\n",
-    "                logger.error(f'{response.content}\\n {target_data}')\n",
-    "    \n",
-    "def send_data(data_to_send):\n",
-    "    for folder_results in data_to_send:\n",
-    "        for _, target_data in folder_results.items():\n",
-    "            try:\n",
-    "                logger.debug(f'Sending data: {target_data}')\n",
-    "                response = requests.post(\n",
-    "                    url='http://127.0.0.1:8000/targets/',\n",
+    "                    url='http://127.0.0.1:8080/targets/',\n",
     "                    auth=(\n",
     "                        os.getenv('DJANGO_USER'),\n",
     "                        os.getenv('DJANGO_PASSWORD'),\n",
-    "                        data=json.dumps(target_data),\n",
-    "                        headers={'content-type': 'application/json'})\n",
+    "                    ),\n",
+    "                    data=json.dumps(target_data),\n",
+    "                    headers={'content-type': 'application/json'})\n",
     "            except (requests.ConnectionError, requests.Timeout) as e:\n",
     "                logger.error(f'No DB connection - {e}')\n",
     "                raise Exception(f'No connection to DB! - {e}')\n",
@@ -299,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "micro-clerk",
    "metadata": {
     "scrolled": true
@@ -343,10 +328,10 @@
       "           'observers': [{'name': 'MS'}],\n",
       "           'telescope': 'Z60',\n",
       "           'total_exposure_time': 720.0},\n",
-      " 'OJ287': {'colorfilters': [{'name': 'B'},\n",
+      " 'OJ287': {'colorfilters': [{'name': 'V'},\n",
+      "                            {'name': 'B'},\n",
       "                            {'name': 'R'},\n",
-      "                            {'name': 'I'},\n",
-      "                            {'name': 'V'}],\n",
+      "                            {'name': 'I'}],\n",
       "           'datetime_end': '2017-04-02T23:38:50.930000',\n",
       "           'datetime_start': '2017-04-02T19:06:20.270000',\n",
       "           'name': 'OJ287',\n",
@@ -370,13 +355,13 @@
       "          'observers': [{'name': 'MS'}],\n",
       "          'telescope': 'Z60',\n",
       "          'total_exposure_time': 3550.0},\n",
-      " 'flat': {'colorfilters': [{'name': 'R'},\n",
+      " 'flat': {'colorfilters': [{'name': 'gs'},\n",
       "                           {'name': 'B'},\n",
-      "                           {'name': 'V'},\n",
-      "                           {'name': 'gs'},\n",
       "                           {'name': 'rs'},\n",
-      "                           {'name': 'I'},\n",
-      "                           {'name': 'is'}],\n",
+      "                           {'name': 'V'},\n",
+      "                           {'name': 'is'},\n",
+      "                           {'name': 'R'},\n",
+      "                           {'name': 'I'}],\n",
       "          'datetime_end': '2017-04-02T17:51:41.630000',\n",
       "          'datetime_start': '2017-04-02T17:38:55.850000',\n",
       "          'name': 'flat',\n",
@@ -384,7 +369,7 @@
       "          'observers': [{'name': 'MS'}],\n",
       "          'telescope': 'Z60',\n",
       "          'total_exposure_time': 509.0},\n",
-      " 'hltau': {'colorfilters': [{'name': 'rs'}, {'name': 'gs'}, {'name': 'is'}],\n",
+      " 'hltau': {'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}],\n",
       "           'datetime_end': '2017-04-02T18:36:22.230000',\n",
       "           'datetime_start': '2017-04-02T18:32:20.590000',\n",
       "           'name': 'hltau',\n",
@@ -392,9 +377,9 @@
       "           'observers': [{'name': 'MS'}],\n",
       "           'telescope': 'Z60',\n",
       "           'total_exposure_time': 225.0},\n",
-      " 'parsamian21': {'colorfilters': [{'name': 'rs'},\n",
+      " 'parsamian21': {'colorfilters': [{'name': 'is'},\n",
       "                                  {'name': 'gs'},\n",
-      "                                  {'name': 'is'}],\n",
+      "                                  {'name': 'rs'}],\n",
       "                 'datetime_end': '2017-04-03T02:50:29.060000',\n",
       "                 'datetime_start': '2017-04-03T02:20:53.270000',\n",
       "                 'name': 'parsamian21',\n",
@@ -402,7 +387,7 @@
       "                 'observers': [{'name': 'MS'}],\n",
       "                 'telescope': 'Z60',\n",
       "                 'total_exposure_time': 1600.0},\n",
-      " 'v1121oph': {'colorfilters': [{'name': 'rs'}, {'name': 'gs'}, {'name': 'is'}],\n",
+      " 'v1121oph': {'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}],\n",
       "              'datetime_end': '2017-04-03T01:56:28.230000',\n",
       "              'datetime_start': '2017-04-03T01:01:12.490000',\n",
       "              'name': 'v1121oph',\n",
@@ -410,7 +395,7 @@
       "              'observers': [{'name': 'MS'}],\n",
       "              'telescope': 'Z60',\n",
       "              'total_exposure_time': 2945.0},\n",
-      " 'vvser': {'colorfilters': [{'name': 'rs'}, {'name': 'gs'}, {'name': 'is'}],\n",
+      " 'vvser': {'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}],\n",
       "           'datetime_end': '2017-04-03T02:16:19.700000',\n",
       "           'datetime_start': '2017-04-03T02:01:33.530000',\n",
       "           'name': 'vvser',\n",
@@ -488,12 +473,12 @@
       "          'observers': [{'name': 'MZ'}],\n",
       "          'telescope': 'Z60',\n",
       "          'total_exposure_time': 1980.0},\n",
-      " 'flat': {'colorfilters': [{'name': 'R'},\n",
+      " 'flat': {'colorfilters': [{'name': 'gs'},\n",
       "                           {'name': 'B'},\n",
-      "                           {'name': 'gs'},\n",
       "                           {'name': 'rs'},\n",
-      "                           {'name': 'I'},\n",
-      "                           {'name': 'is'}],\n",
+      "                           {'name': 'is'},\n",
+      "                           {'name': 'R'},\n",
+      "                           {'name': 'I'}],\n",
       "          'datetime_end': '2020-12-27T15:29:36.970000',\n",
       "          'datetime_start': '2020-12-27T15:17:43.190000',\n",
       "          'name': 'flat',\n",
@@ -523,6 +508,98 @@
     "    pp(grouped_folder_data)\n",
     "    print('#'*9)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "02bf5f15",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'flat', 'datetime_start': '2017-04-02T17:38:55.850000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'gs'}, {'name': 'B'}, {'name': 'rs'}, {'name': 'V'}, {'name': 'is'}, {'name': 'R'}, {'name': 'I'}], 'total_exposure_time': 509.0, 'number_of_frames': 115, 'telescope': 'Z60', 'datetime_end': '2017-04-02T17:51:41.630000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'dark', 'datetime_start': '2017-04-02T17:52:31.270000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'B'}], 'total_exposure_time': 3550.0, 'number_of_frames': 105, 'telescope': 'Z60', 'datetime_end': '2017-04-03T02:56:32.120000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'bias', 'datetime_start': '2017-04-02T18:11:32.690000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'B'}], 'total_exposure_time': 0.0, 'number_of_frames': 50, 'telescope': 'Z60', 'datetime_end': '2017-04-02T18:12:43.430000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'hltau', 'datetime_start': '2017-04-02T18:32:20.590000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}], 'total_exposure_time': 225.0, 'number_of_frames': 9, 'telescope': 'Z60', 'datetime_end': '2017-04-02T18:36:22.230000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'OJ287', 'datetime_start': '2017-04-02T19:06:20.270000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'V'}, {'name': 'B'}, {'name': 'R'}, {'name': 'I'}], 'total_exposure_time': 3780.0, 'number_of_frames': 63, 'telescope': 'Z60', 'datetime_end': '2017-04-02T23:38:50.930000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'J1007', 'datetime_start': '2017-04-02T23:44:32.760000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 600.0, 'number_of_frames': 10, 'telescope': 'Z60', 'datetime_end': '2017-04-02T23:53:47.150000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'J1427', 'datetime_start': '2017-04-03T00:02:03.770000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 600.0, 'number_of_frames': 10, 'telescope': 'Z60', 'datetime_end': '2017-04-03T00:11:18.280000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'J1504', 'datetime_start': '2017-04-03T00:17:09.170000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 720.0, 'number_of_frames': 12, 'telescope': 'Z60', 'datetime_end': '2017-04-03T00:28:42.880000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'J1723', 'datetime_start': '2017-04-03T00:38:58.890000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 720.0, 'number_of_frames': 12, 'telescope': 'Z60', 'datetime_end': '2017-04-03T00:50:16.460000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'v1121oph', 'datetime_start': '2017-04-03T01:01:12.490000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}], 'total_exposure_time': 2945.0, 'number_of_frames': 93, 'telescope': 'Z60', 'datetime_end': '2017-04-03T01:56:28.230000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'vvser', 'datetime_start': '2017-04-03T02:01:33.530000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}], 'total_exposure_time': 770.0, 'number_of_frames': 33, 'telescope': 'Z60', 'datetime_end': '2017-04-03T02:16:19.700000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'parsamian21', 'datetime_start': '2017-04-03T02:20:53.270000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'is'}, {'name': 'gs'}, {'name': 'rs'}], 'total_exposure_time': 1600.0, 'number_of_frames': 48, 'telescope': 'Z60', 'datetime_end': '2017-04-03T02:50:29.060000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'J0952', 'datetime_start': '2017-12-17T00:16:40.720000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 1080.0, 'number_of_frames': 18, 'telescope': 'Z60', 'datetime_end': '2017-12-17T00:38:04.350000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'J1007', 'datetime_start': '2017-12-17T00:52:21.360000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 960.0, 'number_of_frames': 16, 'telescope': 'Z60', 'datetime_end': '2017-12-17T01:08:13.430000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'OJ287', 'datetime_start': '2017-12-17T01:15:35.490000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 600.0, 'number_of_frames': 10, 'telescope': 'Z60', 'datetime_end': '2017-12-17T01:24:56.760000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'flat', 'datetime_start': '2017-12-17T01:45:07.540000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'R'}], 'total_exposure_time': 100.0, 'number_of_frames': 20, 'telescope': 'Z60', 'datetime_end': '2017-12-17T01:47:27.210000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'bias', 'datetime_start': '2017-12-17T01:50:46.940000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'B'}], 'total_exposure_time': 0.0, 'number_of_frames': 50, 'telescope': 'Z60', 'datetime_end': '2017-12-17T01:52:42.380000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'dark', 'datetime_start': '2017-12-17T02:02:26.500000', 'observers': [{'name': 'MS'}], 'colorfilters': [{'name': 'B'}], 'total_exposure_time': 1800.0, 'number_of_frames': 30, 'telescope': 'Z60', 'datetime_end': '2017-12-17T02:32:35.020000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'flat', 'datetime_start': '2020-12-27T15:17:43.190000', 'observers': [{'name': 'MZ'}], 'colorfilters': [{'name': 'gs'}, {'name': 'B'}, {'name': 'rs'}, {'name': 'is'}, {'name': 'R'}, {'name': 'I'}], 'total_exposure_time': 288.0, 'number_of_frames': 63, 'telescope': 'Z60', 'datetime_end': '2020-12-27T15:29:36.970000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'bias', 'datetime_start': '2020-12-27T15:33:17.200000', 'observers': [{'name': 'MZ'}], 'colorfilters': [{'name': 'B'}], 'total_exposure_time': 0.0, 'number_of_frames': 17, 'telescope': 'Z60', 'datetime_end': '2020-12-27T15:35:54.960000'}\n",
+      "b'{\"non_field_errors\":[\"The fields datetime_start, telescope must make a unique set.\"]}'\n",
+      " {'name': 'dark', 'datetime_start': '2020-12-27T15:36:19.850000', 'observers': [{'name': 'MZ'}], 'colorfilters': [{'name': 'B'}], 'total_exposure_time': 1980.0, 'number_of_frames': 22, 'telescope': 'Z60', 'datetime_end': '2020-12-27T16:15:59.730000'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "send_data(data_to_send)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0b297ebe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'fsdfasd'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-47313e6d5239>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mread_names_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'fsdfasd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-58cc37f22356>\u001b[0m in \u001b[0;36mread_names_dict\u001b[0;34m(_file)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mread_names_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0m_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_file\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'fsdfasd'"
+     ]
+    }
+   ],
+   "source": [
+    "read_names_dict('fsdfasd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d66da1c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
